# multi-camera-monitoring

./: .gitignore  CMakeLists.txt  OPTIMIZATION_QUICK_GUIDE.md  PERFORMANCE_ANALYSIS.md  README.md  README_KO.md  config.json  log.txt  run.sh  run_debug.sh  setup.sh  test_backend.cpp  test_camera.cpp  test_encoding.cpp  test_modules.cpp  test_qt_devices.cpp  test_qt_encoding_env.cpp  test_qt_only.cpp
docs/: ARCHITECTURE.md  BUILD.md  COMPONENTS.md  CONFIGURATION.md  GUIDE_KO.md  IMPLEMENTATION.md  MACOS_CAMERA_PERMISSION.md
macos/: Info.plist  TestInfo.plist
resources/: resources.qrc  styles.qss
src/: main.cpp
src/capture/: CaptureThread.cpp  CaptureThread.h  DeviceCapture.cpp  DeviceCapture.h  QtCameraCapture.cpp  QtCameraCapture.h  QtRtspCapture.cpp  QtRtspCapture.h  RtspCapture.cpp  RtspCapture.h
src/core/: Config.cpp  Config.h  FrameBuffer.cpp  FrameBuffer.h  QtVideoRecorder.cpp  QtVideoRecorder.h  VideoRecorder.cpp  VideoRecorder.h
src/utils/: DeviceDetector.cpp  DeviceDetector.h
src/widgets/: CameraSlot.cpp  CameraSlot.h  ExpandedView.cpp  ExpandedView.h  HomeScreen.cpp  HomeScreen.h  MainWindow.cpp  MainWindow.h  MonitoringScreen.cpp  MonitoringScreen.h  OptimizedVideoWidget.cpp  OptimizedVideoWidget.h  RtspInputDialog.cpp  RtspInputDialog.h  SettingsScreen.cpp  SettingsScreen.h  VideoWidget.cpp  VideoWidget.h
src_ref/: MainWindow.cpp  MainWindow.h  README.md  main.cpp
src_ref/i18n/: JsonTranslator.cpp  JsonTranslator.h  README.md
src_ref/managers/: AiClient.cpp  AiClient.h  AiClientPayloadBuilder.cpp  AiClientPayloadBuilder.h  CameraManager.cpp  CameraManager.h  LocalizationManager.cpp  LocalizationManager.h  PLCClient.cpp  PLCClient.h  README.md  RecordingManager.cpp  RecordingManager.h
src_ref/pages/: README.md  SettingsPage.cpp  SettingsPage.h  StoragePage.cpp  StoragePage.h  WeldingPage.cpp  WeldingPage.h
src_ref/utils/: ConfigUtils.cpp  ConfigUtils.h  DebugConfig.cpp  DebugConfig.h  Logger.cpp  Logger.h  README.md  StringUtils.cpp  StringUtils.h
src_ref/widgets/: AnalysisOverlayWidget.cpp  AnalysisOverlayWidget.h  AnalysisStatusPanel.cpp  AnalysisStatusPanel.h  BusyIndicator.cpp  BusyIndicator.h  CameraPreviewWidget.cpp  CameraPreviewWidget.h  CameraRoiWidget.cpp  CameraRoiWidget.h  PlaybackDeviationBar.cpp  PlaybackDeviationBar.h  README.md  RoiStyleUtils.cpp  RoiStyleUtils.h  SessionPlaybackWidget.cpp  SessionPlaybackWidget.h  ToggleSwitch.cpp  ToggleSwitch.h  TwoCameraSplitter.cpp  TwoCameraSplitter.h  WeldAlignmentWidget.cpp  WeldAlignmentWidget.h  ZoomableVideoView.cpp  ZoomableVideoView.h
